<resources>
    <string name="app_name">Stockapp</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="oldpwd">Old Password</string>
    <string name="newpwd">New Password</string>
    <string name="confirmpwd">Confirm New Password</string>
    <string name="changepwd">Change Password</string>
    <string name="update">Update</string>
    <string name="mobile_pnding">Mobile Email</string>
    <string name="pan">Pan</string>
    <string name="bank">Bank</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="yourname">Your Name</string>
    <string name="fullname1">Full Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="nameerror">Enter Username</string>
    <string name="fullname2">Enter Full Name</string>
    <string name="usernameerror">Enter a valid username</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="contactnoerror">Enter a Valid Number</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="byregistry">By registering I agree to the Royal Bull</string>
    <string name="terms">*Terms &amp; Conditions </string>
    <string name="Note">Note:Assam,Telangana,Odisha States are not Allowed </string>
    <string name="login1">Login</string>
    <string name="login">Log In</string>
    <string name="signup">Sign up</string>
    <string name="join_league">Join League</string>
    <string name="Live_ranking">Live Ranking</string>
    <string name="invite_title1">Invite Friends Using</string>
    <string name="skip">Skip</string>
    <string name="logotext">The Royal Bull</string>
    <string name="fblogin">Login with Facebook</string>
    <string name="gmaillogin">Sign in with Google +</string>
    <string name="footertitle1">Don\'t have an account ?</string>
    <string name="footersubtitle1">Register</string>
    <string name="footertitle2">Already have an account ?</string>
    <string name="footersubtitle2">Log In</string>
    <string name="home_footer1">100% Legal</string>
    <string name="home_footer2">30.90% tax will be deducted if winnings are</string>
    <string name="home_footer3"></string>
    <string name="registration">Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_account">MY ACCOUNT</string>
    <string name="nav_league_history">LEAGUE HISTORY</string>
    <string name="nav_point_system">POINTS SYSTEM</string>
    <string name="nav_help">HELP</string>
    <string name="nav_about_us">ABOUT US</string>
    <string name="nav_privacy_policy">PRIVACY POLICY</string>
    <string name="nav_invite">INVITE</string>
    <string name="na_logout">LOGOUT</string>
    <string-array name="nav_item_activity_titles">
        <item>MY ACCOUNT</item>
        <item>LEAGUE HISTORY</item>
        <item>POINT SYSTEM</item>
        <item>HELP</item>
        <item>INVITE</item>
        <item>LOGOUT</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1111791055630068</string>
    <string name="fb_login_protocol_scheme">fb1111791055630068</string>
    <string name="about_title">ABOUT US</string>
    <string name="helptitle">THE ROYAL BULL HELP DESK</string>
    <string name="howtoplay">How to play:</string>
    <string name="points">Points:</string>
    <string name="winning">Winnings:</string>
    <string name="deposits">Deposits:</string>
    <string name="withdraw">Withdrawals:</string>
    <string name="verification">Verification:</string>
    <string name="legality">Legality:</string>
    <string name="fairplay">Fair Play Violation:</string>
    <string name="faceissue">Facing an issue:</string>
    <string name="pointsdesc">For every 0.01% upward movement: 1 point
For every 0.01% downward movement: -1 point
The stock selected as king will get 4x points and the queen will get 2x points.
The Final points and rankings will be reflected after the completion of the contest. Our experts also verify the points with live feeds provided by reliable sources to ensure that points are correctly reflected after every day’s contests.</string>
    <string name="helpdesk">
Create your own portfolio of 20 stocks for playing in NIFTY league.
Create your own portfolio of 12 stocks for playing in SENSEX league.
Select 1 stock as your KING and 1 stock as your QUEEN, which will fetch you a benefit of getting 4x and 2x points respectively.
Save your portfolio and join any league which you wish, from a wide range of options available, member wise and entry fees wise.
The portfolio created can be modified any time before the contest starts. Once the contest starts no modification will be allowed.
Contest starts at 9am and ends at 3:45pm on all the days when the Stock Exchanges are open.
Your rank will be based on the points you earn.
Use your skills and knowledge to beat others and be a leader of the league.</string>
    <string name="winningdesc">Usually, the winnings for a league are added to your account balance within 4 hours of the league being completed.
The winnings will be equally split among tied users. E.g – If the winning amount is Rs 5,000 in a 3- member contest and 2 members end up with equal (highest) points, then these 2 members will get Rs 2,500 each as winnings.
You can withdraw money from your account balance to your bank account once your account is completely verified. (PAN verification and Bank details verification).
Post verification, you can submit your withdrawal request and the amount will be added to your bank account within 5 working days. However, the minimum amount you can withdraw at a time is Rs 200/-
When you win above Rs 10,000 from a single contest, tax at 30.9% will be deducted and the rests gets added as winnings. You will also receive a TDS certificate within 3 months from the winning date with details of the deduction.
    Your TDS certificate gets generated within 3 months from the winning date. We will be emailing it to your registered email address once it is available.</string>
    <string name="depositsdesc">
        Simply use your credit card, Visa/Master/Maestro debit card, net banking account or Paytm wallet to make deposits into your account.
There could have been an unexpected delay in updating your playing account balance. It may be the case that the bank hasn’t cleared your transaction and we are yet to receive the amount. Its usually added instantly, but in such scenarios, it can take upto 30-45 minutes for the transaction to be updated.
In case the amount does not get added even after 45 minutes, do let us know and we would follow up with the bank on your behalf.
In the meanwhile, do go ahead and make another deposit using an alternate mode like credit card, Visa/Master/Maestro debit card , net banking account or PAytm wallet.
Go to “My Account” in the menu, click on “Add/Remove Cards: and enter your credit / debit card number, followed by a valid expiry date. Save your details and then make the payment accordingly.
It is absolutely safe to enter your card details. We do not store your credit/debit card details with us, including your CVV number. We only work with trusted third party payment gateways with 3D secure authentication to ensure safety &amp; security of all your financial transactions.
You can add multiple credit / debit cards to your account as long as they haven’t expired.
We accept all major credit / debit cards such as Visa, MasterCard, Maestro,etc except American Express.
    </string>
    <string name="withdrawdesc">
        You can submit a withdrawal request (minimum of Rs 200 and maximum of Rs 2,00,000 at a time) once your account is verified. The withdrawal amount will be transferred to your bank account within 5 working days.
You can withdraw money from your playing account balance ONLY to your own bank account. If you do not have a bank account, your winnings will keep getting accumulated in your account balance. Once u get a bank account in your name, you can use the same to get your account verified and place your withdrawal requests.
If your bank has rejected your transaction, kindly check with them once and if there is a mismatch of your account details, Invalid IFSC code, Invalid account number ,etc, we ‘ll reverse the money back into your
    </string>
    <string name="verificationdesc">
        Verify your mobile number by entering the OTP sent to your phone and submit.
Check your email and click on the Verify now button to verify your email id registered with the account associated.
Enter your PAN number, upload your PAN card image and submit.
Enter your bank details, upload your bank account proof and submit.
Once PAN and bank details are submitted, you will receive an update within 5 working days!
To change the bank details on your already verified account, please send us an email with a request to mark your account not verified.
Once that is done from our end, you can submit a new verification request with the new bank details along with your PAN.
Creating multiple accounts violates our fair play policy and he cannot verify multiple accounts using same PAN and bank details.
PAN card is mandatory to get your account verified, due to regulatory requirements.
If you do not have a PAN card, you can apply for one and submit a verification request when you receive it. In the meanwhile, you can still join contest and your winnings will get accumulated in your account.
    </string>
    <string name="about_us1">
        We, THE ROYAL BULL group, dreamed of an idea that can give its users the
satisfaction of being proven right in the stock market. Enjoy the ride of ups &amp;
downs in the market with our unique &amp; first ever game of its kind. While trading
in the market, most of the people loose money because of trading in a single
stock, high brokerage &amp; many other factors. Here we bring a skill based game
where, on the basis of your research &amp; experience you have to create your own
portfolio, select yours favorite as KING &amp; QUEEN, fight 1 on 1, 4 on 1 or join your
choice of league out of many options provided by us, joining fee wise &amp; number
of participant wise. For details please visit- How to play.
    </string>
    <string name="about_us2">
       Join today with small amount &amp; win big.
    </string>
<string name="about_us3">
       Our group head, Sweta Mandaliya is a commerce graduate from Mithibai College
in Mumbai. She is surrounded by friends &amp; family members who are Chartered
Accountants, Engineers &amp; MBAs.
    </string>
    <string name="legalitydesc">
        Currently, the residents of Assam, Odisha and Telangana are not permitted to play pay-to-play formats of any online games. The laws in these states are unclear as to whether games of skill may be played for a fee.
    </string>
    <string name="fairplaydesc">
        If you have received an email from The Royal bull that says my account has been deactivated/my balance has been deducted then it may have been due to certain unusual activity observed in your account which have violated our Fair play policy.

    </string>
</resources>