<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.game.stock.stockapp.Register"
    android:background="@drawable/bg">



<LinearLayout android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="60sp"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:background="@color/buttoncolor"
    android:layout_marginTop="3sp"
    android:visibility="visible">


<TextView

            android:id="@+id/footertitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4sp"
            android:text="@string/footertitle2"
            android:textSize="12sp"
            android:layout_marginLeft="60sp"
            android:textColor="@color/white" />
        <!-- menu bar -->

        <Button

            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/buttoncolor"
            android:gravity="center_vertical"
            android:text="@string/footersubtitle2"
            android:textSize="@dimen/button"
            android:layout_marginLeft="4sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>

    <!-- HEADER -->

    <LinearLayout
        android:id="@+id/linearlayout_toolbaar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_toolbaar"
        android:layout_above="@+id/footer">

    <LinearLayout
       android:id="@+id/linearlayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logoresize"
                android:layout_marginTop="10sp"
                />
            <TextView

                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4sp"
                android:text="@string/logotext"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle_border"
            android:layout_margin="10sp"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/edit_username"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:hint="@string/yourname"
                android:inputType="text"
                android:padding="4dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="40sp"
                android:background="@color/black" />




            <EditText
                android:id="@+id/email"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/edit_email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5sp"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="40sp"
                android:background="@color/black" />
            <EditText
                android:id="@+id/password"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/edit_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5sp"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="40sp"
                android:background="@color/black" />
            <EditText
                android:id="@+id/phone"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/edit_phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:padding="5sp"
                android:textColor="@color/black"
                android:textSize="16sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/loginbutton"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:textSize="@dimen/button"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/byregisry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/byregistry"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:gravity="center"/>

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="3dp"/>


            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Note"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15sp"
                ></TextView>

        </LinearLayout>


</LinearLayout>
    </ScrollView>
<LinearLayout
    android:id="@+id/linearlayout_otpVerification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_below="@+id/linearlayout_toolbaar">
    <include layout="@layout/otp_verification"/>
</LinearLayout>
</RelativeLayout>